agregado todo excepto el principal

--- a/IndexInst.html
+++ b/IndexInst.html
@@ -14,6 +14,7 @@
         <nav>
             <ul>
                 <li>kresla</li>
+                <li url="/Instagram.html" > market</li>
                 <li>Our Corp</li>
                 <li>Finance & technology develop consulting</li>
                 <li>Investors</li>
@@ -26,6 +27,7 @@
                     <h2>Fintech</h2>
                     <h3>un camino asegurado al exito</h3>
                     </hgroup>
+                    
                 </header>
                 Este es el texto de mi primer mensaje
                 <figure>
